# agent

./: .gitignore  .mcp.json  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md  settings.json
.claude/agents/: report-generator.md
scripts/: seed-demo-data.sql  setup-genie.sh
server/: Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_create_memory_schema.py  002_add_retention_and_confidence.py  003_drop_custom_metrics.py
server/src/: server.py
server/src/config/: settings.py
server/src/guards/: __init__.py  auth.py  auth_middleware.py  circuit_breaker.py  sanitizer.py  validator.py
server/src/infra/: __init__.py  database.py
server/src/models/: __init__.py  business.py  memory.py
server/src/repositories/: __init__.py  client_repo.py  financial_repo.py  memory_repo.py  sales_repo.py
server/src/schemas/: __init__.py  auth.py  business.py  circuit_breaker.py  memory.py  pipeline.py
server/src/services/: __init__.py  analyzer.py  context_service.py  gatherer.py  memory_service.py  report_service.py
server/src/tools/: _common.py  memory.py  queries.py  registry.py  report.py  system.py
server/src/utils/: __init__.py  report_formatter.py
